# mulle-atinit

./: .gitignore  .touch  CMakeLists.txt  README.md  RELEASENOTES.md  clib.json  mulle-atinit.graphml  package.json
.github/workflows/: mulle-sde-ci.yml  semgrep.yml
.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: environment-project.sh
.mulle/share/sourcetree/: config
cmake/: Headers.cmake  _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: StandaloneC.cmake  StartupC.cmake
cola/: description.md.bud  properties.plist  usage.md.bud
src/: _mulle-atinit-include-private.h  _mulle-atinit-include.h  include.h  mulle-atinit.c  mulle-atinit.h  mulle-atinit.inc
src/generic/: include.h
src/reflect/: _mulle-atinit-include-private.h  _mulle-atinit-include.h  _mulle-atinit-versioncheck.h
test/.mulle/etc/env/: environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh
test/.mulle/etc/sourcetree/: config
test/.mulle/share/sde/: mulle-test
test/10-static/: prios.c
test/10_static/: prios.c  simple.c  simple.stdout
test/20-dynamic/: dynamic.environment  dynamic.environment.windows  dynamic.stdout
test/20-mergesort/: pointer-merge-sort.c  sort-words.c  sort-words.stdout
test/20_dynamic/: CMakeLists.txt  dynamic.environment  dynamic.environment.windows  dynamic.stdout.windows  main.c  x.c  y.c  z.c
test/30-mergesort/: pointer-merge-sort.stdout
